--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui-treasury/components": "^1.9.2",
     "@mui-treasury/layout": "^4.5.0",
     "@types/react": "^17.0.0",
+    "autosuggest-highlight": "^3.1.1",
     "base-shell": "1.x",
     "chart.js": "2.x",
+    "convert-units": "^2.3.4",
     "diff": ">=3.5.0",
     "final-form": "4.x",
     "final-form-arrays": "3.x",
@@ -28,7 +30,7 @@
     "github-markdown-css": "4.x",
     "intl": "1.x",
     "intl-locales-supported": "1.x",
-    "lodash": ">=4.17.21",
+    "lodash": "^4.17.21",
     "material-ui-image": "3.x",
     "material-ui-shell": "1.x",
     "moment": "2.x",
