--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@firebase/app": "^0.6.13",
     "@firebase/app-types": "^0.6.1",
     "@formatjs/intl-relativetimeformat": "8.x",
-    "@material-ui/core": "4.x",
+    "@material-ui/core": "^4.12.2",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "4.x",
     "@material-ui/lab": "^4.0.0-alpha.56",
