--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-ios-pwa-prompt": "1.x",
     "react-linkify": "^1.0.0-alpha",
     "react-markdown": "5.x",
+    "react-medium-image-zoom": "^4.3.4",
     "react-query": "^3.5.16",
     "react-router-dom": "5.x",
     "react-scripts": "4.0.1",
