--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .pnp.js
 
 
+
 # testing
 /coverage
 
@@ -25,3 +26,5 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 functions/node_modules/
+.firebase/hosting.YnVpbGQ.cache
+.firebase/hosting.YnVpbGQ.cache
