--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-query": "^3.5.16",
     "react-router-dom": "5.x",
     "react-scripts": "4.0.1",
+    "react-to-pdf": "^0.0.14",
     "react-virtualized-auto-sizer": "1.x",
     "react-window": "1.x",
     "rmw-shell": "8.1.21",
