--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "final-form": "4.x",
     "final-form-arrays": "3.x",
     "firebase": "8.x",
+    "firebase-functions": "^3.15.5",
     "firebaseui": "4.x",
     "github-markdown-css": "4.x",
     "intl": "1.x",
