--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "git.ignoreLimitWarning": true,
-    "compile-hero.disable-compile-files-on-did-save-code": true
+  "git.ignoreLimitWarning": true,
+  "compile-hero.disable-compile-files-on-did-save-code": true,
+  "synthwave84.brightness": 0.5
 }
