--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@date-io/core": "^2.10.6",
     "@date-io/moment": "1.x",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@firebase/analytics": "^0.6.2",
     "@firebase/app": "^0.6.13",
     "@firebase/app-types": "^0.6.1",
@@ -17,7 +19,9 @@
     "@material-ui/styles": "^4.11.2",
     "@mui-treasury/components": "^1.9.2",
     "@mui-treasury/layout": "^4.5.0",
+    "@mui/material": "^5.2.3",
     "@types/react": "^17.0.0",
+    "@yarn-tool/ncu": "^1.0.88",
     "autosuggest-highlight": "^3.1.1",
     "base-shell": "1.x",
     "chart.js": "2.x",
